--- a/ui/bower.json
+++ b/ui/bower.json
@@ -11,7 +11,8 @@
     "angular-cookies": "1.2.6",
     "angular-sanitize": "1.2.6",
     "angular-route": "1.2.6",
-    "angular-leaflet-directive": "~0.7.2"
+    "angular-leaflet-directive": "~0.7.2",
+    "angular-ui-bootstrap": "~0.9.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
