--- a/ui/bower.json
+++ b/ui/bower.json
@@ -12,7 +12,9 @@
     "angular-sanitize": "1.2.6",
     "angular-route": "1.2.6",
     "angular-leaflet-directive": "~0.7.2",
-    "angular-ui-bootstrap": "~0.9.0"
+    "angular-ui-bootstrap": "~0.9.0",
+    "angular-gravatar": "~0.1.3",
+    "angular-recaptcha": "~0.0.7"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
